updating pupup blocks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img class="header__logo_img" src="img/logo.svg" alt="logo">
             </a>
             <div class="header__nav">
-                <ul class="menu__list" id="header">
+                <ul class="menu__list lock-padding" id="header">
                     <li class="menu__item">
                         <a href="#main" class="menu__item_link">ГЛАВНАЯ</a>
                     </li>
@@ -94,9 +94,9 @@
                     <li class="privilege-vip__list_item">УСКОРЕНЫЙ ПОДЪЕМ VIP-ИГРОКА ПО ЛЕСТНИЦЕ.</li>
                 </ul>
                 <div class="line"></div>
-                <a class="privilege__more" href="#popup_vip">Полный список</a>
+                <a class="privilege__more popup-link" href="#popup_vip">Полный список</a>
                 <div class="privilege__price_vip"><div class="price_vip">50</div><p>грн</p></div>
-                <a class="privilege__buy_btn" href="#popup_buy_vip">Купить</a>
+                <a class="privilege__buy_btn popup-link" href="#popup_buy_vip">Купить</a>
             </div>
             <div class="donate-block__admin">
                 <div class="donate-block__admin_title">Immigration public</div>
@@ -121,9 +121,9 @@
                     <li class="privilege-admin__list_item">ИЗМЕНЯТЬ ГРАВИТАЦИЮ.</li>
                 </ul>
                 <div class="line"></div>
-                <a class="privilege__more" href="#popup_admin">Полный список</a>
+                <a class="privilege__more popup-link" href="#popup_admin">Полный список</a>
                 <div class="privilege__price_admin"><div class="price_admin">100</div><p>грн</p></div>
-                <a class="privilege__buy_btn" href="#popup_buy_admin">Купить</a>
+                <a class="privilege__buy_btn popup-link" href="#popup_buy_admin">Купить</a>
             </div>
         </div>
     </section>
@@ -229,6 +229,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts/price-list.js"></script>
     <script src="scripts/navbar-scroll.js"></script>
+    <script src="scripts/popup.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
