updating burger menu

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <a class="header__logo" href="#">
                 <img class="header__logo_img" src="img/logo.svg" alt="logo">
             </a>
+            <div class="header__burger">
+                <span></span>
+            </div>
             <div class="header__nav">
                 <ul class="menu__list lock-padding" id="header">
                     <li class="menu__item">
@@ -231,6 +234,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts/price-list.js"></script>
     <script src="scripts/navbar-scroll.js"></script>
+    <script src="scripts/burger-menu.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
