--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
     </section>
     <section class="page__footer">
         <div class="page__footer_title">© 2021 Immigration public</div>
+        <a href="#" class="page__footer_link">Powered by: Pow3r ™</a>
     </section>
     <div id="popup_vip" class="popup">
         <a href="#header" class="popup__area"></a>
