--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                         <a href="#price" class="menu__item_link">ЦЕНЫ</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__item_link">БАНЛИСТ</a>
+                        <a href="http://tryharders.cshost.su/sb/" target="blank" class="menu__item_link">БАНЛИСТ</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="http://tryharders.cshost.su/toppoints/" target="blank" class="menu__item_link">СТАТИСТИКА</a>
                     </li>
                     <li class="menu__item">
                         <a href="#contacts" class="menu__item_link">КОНТАКТЫ</a>
@@ -42,7 +45,7 @@
         <div class="page__main-text">
             <h1 class="page__main-text_title">Immigration public</h1>
             <p class="page__main-text_desc">Лучший паблик, на котором ты можешь поиграть.</p>
-            <a class="page__main_btn" href="#">Connect</a>
+            <a class="page__main_btn" href="connect 91.211.118.20:27015">Connect</a>
         </div>
         <img class="page__main-img" src="img/main-block-icon.svg" alt="img">
         <a class="page__main-more" href="#rules">
@@ -137,14 +140,14 @@
         <div class="contacts-block">
             <div class="contacts-block__title">Контакты сервера</div>
             <div class="contacts-block__buttons">
-                    <a href="" class="btn__item-link_telegram"><img src="img/telegram-icon.svg" alt="tgIcon">Telegram</a>
-                    <a href="" class="btn__item-link_discord"><img src="img/discord-icon.svg" alt="dsIcon">Discord</a>
+                    <a href="https://t.me/immigrationCS" target="blank" class="btn__item-link_telegram"><img src="img/telegram-icon.svg" alt="tgIcon">Telegram</a>
+                    <a href="https://discord.gg/7t8H9ukz5q" target="blank" class="btn__item-link_discord"><img src="img/discord-icon.svg" alt="dsIcon">Discord</a>
             </div>
         </div>
     </section>
     <section class="page__footer">
         <div class="page__footer_title">© 2021 Immigration public</div>
-        <a href="#" class="page__footer_link">Powered by: Pow3r ™</a>
+        <a href="https://github.com/pow3r-prog" target="blank" class="page__footer_link">Powered by: Pow3r ™</a>
     </section>
     <div id="popup_vip" class="popup">
         <a href="#header" class="popup__area"></a>
@@ -204,8 +207,8 @@
                 <div class="popup__title_vip">Vip</div>
                 <div class="popup__text">Для приобретения привилегии "Vip" свяжитесь с главным администратором сервера в телеграме или в стиме.</div>
                 <div class="popup__buttons">
-                    <a href="#" class="popup__buy_btnT"><img src="img/telegram-icon.svg" alt="Telegram"></a>
-                    <a href="#" class="popup__buy_btnS"><img src="img/steam-icon.svg" alt="Steam"></a>
+                    <a href="#" target="blank" class="popup__buy_btnT"><img src="img/telegram-icon.svg" alt="Telegram"></a>
+                    <a href="https://steamcommunity.com/id/nerti77" target="blank" class="popup__buy_btnS"><img src="img/steam-icon.svg" alt="Steam"></a>
                 </div>
             </div>
         </div>
@@ -225,8 +228,8 @@
                      </div>
                 </div>
                 <div class="popup__buttons">
-                    <a href="#" class="popup__buy_btnT"><img src="img/telegram-icon.svg" alt="Telegram"></a>
-                    <a href="#" class="popup__buy_btnS"><img src="img/steam-icon.svg" alt="Steam"></a>
+                    <a href="#" target="blank" class="popup__buy_btnT"><img src="img/telegram-icon.svg" alt="Telegram"></a>
+                    <a href="https://steamcommunity.com/id/nerti77" target="blank" class="popup__buy_btnS"><img src="img/steam-icon.svg" alt="Steam"></a>
                 </div>
                 
             </div>
